<resources>
    <string name="app_name">Film Viewer</string>
    <string-array name="categories">
        <item>Title</item>
        <item>Director</item>
        <item>Protagonist</item>
        <item>Year</item>
        <item>Country</item>
    </string-array>
    <string name="search_hint_actor">Search Actor/Actress name</string>
    <string name="search_hint">Search</string>
    <string name="search_title">Search</string>
    <string name="title_activity_prueva_navigation">PruevaNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_button_menu">Home</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_names">Juan Miguel de Haro - Carlos Roldán</string>
    <string name="about_assignatura">Interacció i Disseny d\'Interfícies - FIB</string>
    <string name="about_quadrimestre">- 2017 -</string>
</resources>
